# process_data

./: .gitignore  README.md  hw4_days.py  hw4_distance.py  hw4_simba.py  hw4_sum.py  hw5.py  hw5_deck.py  hw5_formulas.py  process_data_demo.ipynb  process_data_tests.py  pyproject.toml  setup.py  test_github.txt  test_hw4.ipynb  test_hw4.py  test_hw5.py  test_hw5_card.py  test_hw5_patient.py
src/process_data/: __init__.py  data_binary.py  data_encoding.py  data_fill_nans.py  data_loader.py  data_predict.py  data_remove_nans.py  data_split.py  data_train_models.py  model_predict.py  model_train_models.py  pred_auc_score.py
tests/: conftest.py  test_add_predictions.py  test_data_binary.py  test_data_encoding.py  test_data_fill_nans.py  test_data_loader.py  test_data_predict.py  test_data_remove_nans.py  test_data_split.py  test_data_train_models.py  test_pred_auc_score.py
